@@ -27,6 +27,7 @@ ChangeLog
 [-] * Proper handling of locations and memory type in vCards.
 [-] * Added IDs for several recent Sony-Ericsson phones.
 [-] * Fix decoding of phone numbers in some cases (bug #999).
+[-] * Replace MD5 implementation with public domain one (bug #964).
 
     
 20090908 - 1.26.1
